--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "jupyter2ipynb"
+name = "jupyter2pytest"
 version = "0.1.0"
 authors = [
   { name = "Garrett Credi", email = "garrettcredi@gmail.com" }
