--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "jupyter2pytest"
-version = "0.1.0"
+version = "0.3.0"
 authors = [
   { name = "Garrett Credi", email = "garrettcredi@gmail.com" }
 ]
@@ -8,7 +8,8 @@ description = "Converts Jupyter notebooks into pytest capable test files."
 readme = "README.md"
 requires-python = ">=3.6"
 dependencies = [
-  "nbformat"
+  "nbformat",
+  "tblib"
 ]
 license = { file = "LICENSE" }
 keywords = ["pytest", "jupyter", "autograding"]
